--- a/app/project1/webapp/view/Newpage.view.xml
+++ b/app/project1/webapp/view/Newpage.view.xml
@@ -18,20 +18,20 @@
                     />
                 </uxap:expandedHeading>
                 <uxap:actions>
-                    <Button
+                    <Button id="_IDGenButton1"
                         text="Edit"
                         type="Emphasized"
                         press="onEdit"
                     />
-                    <Button
+                    <Button id="_IDGenButton2"
                         type="Transparent"
                         text="Delete"
                     />
-                    <Button
+                    <Button id="_IDGenButton3"
                         type="Transparent"
                         text="Copy"
                     />
-                    <OverflowToolbarButton
+                    <OverflowToolbarButton id="_IDGenOverflowToolbarButton1"
                         icon="sap-icon://action"
                         type="Transparent"
                         text="Share"
@@ -41,12 +41,12 @@
             </uxap:ObjectPageDynamicHeaderTitle>
         </uxap:headerTitle>
         <uxap:headerContent>
-            <FlexBox
+            <FlexBox id="_IDGenFlexBox1"
                 wrap="Wrap"
                 fitContainer="true"
             >
-                <layout:VerticalLayout class="sapUiSmallMarginBeginEnd">
-                    <Link text="{phone}" />
+                <layout:VerticalLayout id="_IDGenVerticalLayout1" class="sapUiSmallMarginBeginEnd">
+                    <Link id="_IDGenLink1" text="{phone}" />
                 </layout:VerticalLayout>
             </FlexBox>
         </uxap:headerContent>
@@ -57,7 +57,7 @@
                 title="Book Details"
             >
                 <uxap:subSections>
-                    <uxap:ObjectPageSubSection>
+                    <uxap:ObjectPageSubSection id="_IDGenObjectPageSubSection1">
                         <uxap:blocks>
                             <core:Fragment type="XML" fragmentName ="com.app.project1.fragments.bookdetails" />
                         </uxap:blocks>
@@ -71,7 +71,7 @@
                 title="Author Address Details"
             >
                 <uxap:subSections>
-                    <uxap:ObjectPageSubSection>
+                    <uxap:ObjectPageSubSection id="_IDGenObjectPageSubSection2">
                         <uxap:blocks>
                            <core:Fragment type="XML" fragmentName ="com.app.project1.fragments.address" />
                         </uxap:blocks>
@@ -85,9 +85,9 @@
                 title="Details"
             >
                 <uxap:subSections>
-                    <uxap:ObjectPageSubSection>
+                    <uxap:ObjectPageSubSection id="_IDGenObjectPageSubSection3">
                         <uxap:blocks>
-                            <Text text="Naveen" />
+                            <Text id="_IDGenText1" text="Naveen" />
                         </uxap:blocks>
                     </uxap:ObjectPageSubSection>
                 </uxap:subSections>
@@ -99,9 +99,9 @@
                 title="Contact Details"
             >
                 <uxap:subSections>
-                    <uxap:ObjectPageSubSection>
+                    <uxap:ObjectPageSubSection id="_IDGenObjectPageSubSection4">
                         <uxap:blocks>
-                            <Text text="Naveen" />
+                            <Text id="_IDGenText2" text="Naveen" />
                         </uxap:blocks>
                     </uxap:ObjectPageSubSection>
                 </uxap:subSections>
